--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -1,9 +1,16 @@
 $primary=#1faaf2
 $primaryhover=lighten(#1faaf2, 35%)
 
-$red=#a74482
-$green=#a6ebc9
-$orange=#f3ca40
+$bg=#242424
+$bgdark=#1d1d1d
+$bglight=#333
+$bglighter=#393939
+
+
+$blue=#15bdff
+$blueactive=#83dcff
+$green=#30e692
+$orange=#fc7a7a
 
 $black=#222
 $gray=#262626
@@ -11,6 +18,8 @@ $grayalt=#323232
 $grayhover=#444
 
 $lightgray=#AAA
-$white=#FAFAFA
+$white=#c3c3c3
 
-$monospace=font-family Consolas, Andale Mono, Monaco, Courier New, monospace
+$normalfont=system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
+$monospace=system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
+//Consolas, Andale Mono, Monaco, Courier New, monospace
