set body background color

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -9,6 +9,7 @@ body.aframe-inspector-opened,
   font-family BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
 
 body.aframe-inspector-opened
+  background $bgdark
   color #fff
   font-size 12px
   margin 0
