hide selected hud on smaller width

--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -21,4 +21,9 @@ $white=#c3c3c3
 
 $normalfont=system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
 $monospace=system-ui, BlinkMacSystemFont, -apple-system, "Segoe UI", Helvetica, Arial, sans-serif
-//Consolas, Andale Mono, Monaco, Courier New, monospace
+
+media--1024() {
+  @media (min-width: 1024px) {
+    {block}
+  }
+}
