dont use blue for IDs for now

--- a/src/style/entity.styl
+++ b/src/style/entity.styl
@@ -12,10 +12,7 @@
   white-space nowrap
 
 [data-entity-name-type="id"]
-  color $blue
-
-.active [data-entity-name-type="id"]
-  color $blueactive
+  color $red
 
 [data-entity-name-type="class"]
   color $green
