--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -6,8 +6,7 @@ $bgdark=#1d1d1d
 $bglight=#333
 $bglighter=#393939
 
-$blue=#15bdff
-$blueactive=#83dcff
+$red=#a74482
 $green=#30e692
 $orange=#fc7a7a
 
