mute color for back button

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -90,8 +90,8 @@ body.aframe-inspector-opened
       user-select none
 
   .toggle-edit
-    background-color #ed3160
-    color #fff
+    background-color $red
+    color #FAFAFA
     font-size 13px
     left 3px
     margin 0
