--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -6,9 +6,9 @@ $bgdark=#1d1d1d
 $bglight=#333
 $bglighter=#393939
 
-$red=#a74482
-$green=#30e692
-$orange=#fc7a7a
+$red=#92374d
+$green=#514b23
+$orange=#d66853
 
 $black=#222
 $gray=#262626
