--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -149,6 +149,7 @@ div.vec4
     letter-spacing 1px
 
 .propertyRowDefined .text
+  color #FAFAFA
   font-weight 500
 
 .components *
@@ -228,7 +229,6 @@ a.help-linkhover
 
 #componentEntityHeader .gltfIcon img
   top 0
-
 
 .fa
   color $white
