--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -71,8 +71,9 @@
 
   .fa
     color #CCC
-    &:hover
-      color $primary
+
+  .entityActions .fa:hover
+    color $primary
 
   .active .fa
     color #FAFAFA
