specify default css properties on some elements to fix style issues when using the inspector in a site that has tailwind base.css

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -49,6 +49,7 @@ div.vec4
 .collapsible .static
   background $bglight
   border-bottom 2px solid $bg
+  box-sizing content-box
   cursor pointer
   height 16px
   padding 8px 10px 12px 10px
@@ -133,8 +134,10 @@ div.vec4
     background $bgdark
     color #1faaf2
     min-height 26px
+    padding-bottom 1px
     padding-left 5px
     padding-right 5px
+    padding-top 1px
     &:last-child
       padding-right 0
 
