--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -126,6 +126,7 @@
     flex 1 1 auto
     font-size 13px
     height calc(100% - 98px)
+    line-height normal
     outline none
     overflow-y auto
     padding 0
