fix right panel + button to really be on the right

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -247,12 +247,6 @@ body.aframe-inspector-opened
     position absolute
     z-index 9998
 
-    .left
-      left 0
-
-    .right
-      right 0
-
     a
       background-color #262626
       color #bcbcbc
@@ -262,3 +256,9 @@ body.aframe-inspector-opened
     a.hover
       background-color #1faaf2
       color #fff
+
+  .toggle-sidebar.left
+      left 0
+
+  .toggle-sidebar.right
+      right 0
