add top 0 on left and right classes so the + button really shows up

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -258,7 +258,9 @@ body.aframe-inspector-opened
       color #fff
 
   .toggle-sidebar.left
-      left 0
+    top 0
+    left 0
 
   .toggle-sidebar.right
-      right 0
+    top 0
+    right 0
