Fix checkbox that was always black when tailwindcss base style is present on the page

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -128,10 +128,14 @@ body.aframe-inspector-opened
     outline none
 
   input[type="checkbox"]
+    appearance auto
     cursor pointer
     margin 0
     height 18px
     width 18px
+
+  input[type="checkbox"]:focus
+    box-shadow none
 
   input.number
     background-color transparent !important
