Fix initial value position in select fields

--- a/src/style/select.styl
+++ b/src/style/select.styl
@@ -14,6 +14,9 @@
 .select__indicator-separator
   display none
 
+.select__input
+  min-height auto !important
+
 .select__control,
 .select__menu
   background $bgdark
