Remove 1px box-shadow applied by tailwindcss when input has focus

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -146,6 +146,10 @@ div.vec4
     box-sizing border-box
     width 165px
 
+  input[type=text]:focus,
+  input.string:focus
+    box-shadow none
+
   .color_value
     margin 0 0 0 5px
     width 68px
