Cancel tailwindcss default style on select input when adding a component

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -195,11 +195,12 @@ a.help-linkhover
       span
         color $primary
 
-
-
   #addComponentHeader
     font-size 15px
     margin 5px 0 10px 0
+
+  input[type=text]:focus
+    box-shadow none
 
 .Select-menu-outer .is-focused span
   color #fff
