--- a/src/style/textureModal.styl
+++ b/src/style/textureModal.styl
@@ -84,11 +84,6 @@
   min-height 60px
   padding 3px 10px
 
-.gallery li .button.fa-external-link
-  margin-left 136px
-  margin-top 5px
-  position fixed
-
 .preview
   padding 10px
   width 150px
@@ -179,26 +174,21 @@
 .texture canvas + input
   margin-left 5px
 
-.texture .fa
+.texture svg
   padding-right 5px
-
-.texture .fa-external-link
-  font-size 14px
-  padding-top 2px
 
 .uploader-normal-button .hidden
   display none
 
-.gallery a.fa.texture-link
-  box-shadow 0 0 14px -1px rgba(0, 0, 0, 0.75)
-  position fixed
-
 .assets.search
+  position relative
   margin-top 10px
   width 200px
 
-.assets.search .fa-search
-  top 7px
+.assets.search svg
+  position absolute
+  right 0px
+  top 5px
 
 .new_asset_options
   margin 10px
