Use our own AwesomeIcon component instead of FontAwesomeIcon, this reduces minified build by 66 kB

--- a/src/style/lib.styl
+++ b/src/style/lib.styl
@@ -26,3 +26,16 @@ media--1024() {
     {block}
   }
 }
+
+/* CSS rules from the original FontAwesomeIcon component */
+svg:not(:root).svg-inline--fa, svg:not(:host).svg-inline--fa {
+  overflow: visible;
+  box-sizing: content-box;
+}
+
+.svg-inline--fa {
+  display: inline-block;
+  height: 1em;
+  overflow: visible;
+  vertical-align: -0.125em;
+}
