Remove extra space when we use search in left panel

--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -109,7 +109,7 @@
       text-indent 10px
       width 216px
 
-    svg
+    >svg, a.button
       position absolute
       right 14px
       top 10px
