Fix blue hover on all icons

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -206,8 +206,8 @@ body.aframe-inspector-opened
     margin-left 10px
     text-decoration none
 
-  a.buttonhover
-    color #1faaf2
+    &:hover
+      color $primary
 
   @keyframes animateopacity
     from { opacity: 0 }
