--- a/src/style/textureModal.styl
+++ b/src/style/textureModal.styl
@@ -36,8 +36,8 @@
   font-size 28px
   font-weight bold
 
-.closehover,
-.closefocus
+.close:hover,
+.close:focus
   color #08f
   cursor pointer
   text-decoration none
@@ -135,7 +135,7 @@
   margin 0 10px 0 0
   padding 5px 10px
 
-.modal buttonfocus
+.modal button:focus
   outline none
 
 .modal button
@@ -143,17 +143,17 @@
   border none
   color #fff
 
-.modal buttonhover,
+.modal button:hover,
 .modal button.hover
   background-color #346392
   text-shadow -1px 1px #27496d
 
-.modal buttonactive,
+.modal button:active,
 .modal button.active
   background-color #27496d
   text-shadow -1px 1px #193047
 
-.modal buttondisabled
+.modal button:disabled
   background-color #888
   cursor none
 
