Fix pink color on hover for Back to Scene/Inspect Scene button

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -108,7 +108,7 @@ body.aframe-inspector-opened
     width 204px
     z-index 999999999
 
-  .toggle-edithover
+  .toggle-edit:hover
     background-color rgb(228, 43, 90)
 
   input
