--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -110,7 +110,7 @@ body.aframe-inspector-opened
     width 100px
     z-index 999999999
 
-  .toggle-edithover
+  .toggle-edit:hover
     background-color rgb(228, 43, 90)
 
   .try-editor-btn
