--- a/src/style/scenegraph.styl
+++ b/src/style/scenegraph.styl
@@ -1,7 +1,7 @@
 @import './lib';
 
 #toolbar
-  background-color $bg
+  background-color var(--color-base-200)
 
   .toolbarActions
     padding 5px 10px
@@ -14,8 +14,8 @@
       cursor default
 
 #scenegraph
-  background $bg
-  border-top 1px solid #111
+  background var(--color-base-200)
+  border-top 1px solid var(--color-base-300)
   display flex
   flex-direction column
   overflow auto
@@ -23,7 +23,7 @@
   width 230px
 
   .entity
-    background $bg
+    background var(--color-base-200)
     box-sizing border-box
     cursor pointer
     display flex
@@ -36,18 +36,19 @@
     white-space nowrap
 
     &:hover
-      background #1d2f39
+      background var(--color-accent-hover)
+      color var(--color-accent-content)
 
     &.active
-      background-color #155373
-      color #fff
+      background-color var(--color-accent)
+      color var(--color-accent-content)
       .entityActions
         align-items center
         display flex
         padding-right 2px
 
         a.button:hover
-          color $primary
+          color var(--color-primary)
 
     &.novisible
       &.active
@@ -55,7 +56,7 @@
         svg,
         .collapsespace,
         .id
-          color #999
+          color #626262
 
       &:not(.active)
         span,
@@ -65,7 +66,7 @@
           color #626262
 
   .component:hover
-    color $primary
+    color var(--color-primary)
 
   .entityIcons
     margin-left 2px
@@ -74,21 +75,24 @@
     display none
 
     .button
-      color #fff
+      color var(--color-base-content)
       font-size 12px
       margin-left 6px
 
   .id
-    color #ccc
+    color var(--color-base-content)
 
   .option.active .id
-    color #fff
+    color var(--color-base-content)
 
   .collapsespace
-    color #eee
+    color var(--color-base-content)
     display inline-block
     text-align center
     width 14px
+
+  .fa-eye
+    color var(--color-base-content)
 
   .search
     padding 5px
@@ -97,12 +101,15 @@
     display flex
 
     input
-      color $white
-      background $bgdark
+      color var(--color-primary)
+      background var(--color-base-300)
       border-radius 0
       box-sizing border-box
       padding 5px 10px
       width 100%
+
+    >svg
+      color var(--color-base-content)
 
     >svg, a.button
       position absolute
@@ -110,8 +117,8 @@
       top 10px
 
   .outliner
-    background $bg
-    color $white
+    background var(--color-base-200)
+    color var(--color-base-content)
     cursor default
     flex 1 1 auto
     font-size 13px
