Fix css rules that removed color widget inner padding

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -232,16 +232,16 @@ body.aframe-inspector-opened
     width 50px
 
   /* Note these vendor-prefixed selectors cannot be grouped! */
-  input[type=color]-webkit-color-swatch
+  input[type=color]::-webkit-color-swatch
     border 0  /* To remove the gray border. */
 
-  input[type=color]-webkit-color-swatch-wrapper
+  input[type=color]::-webkit-color-swatch-wrapper
     padding 0  /* To remove the inner padding. */
 
-  input[type=color]-moz-color-swatch
+  input[type=color]::-moz-color-swatch
     border 0
 
-  input[type=color]-moz-focus-inner
+  input[type=color]::-moz-focus-inner
     border 0  /* To remove the inner border (specific to Firefox). */
     padding 0
 
