--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -193,11 +193,9 @@ body.aframe-inspector-opened
     font-size 13px
     padding 2px
 
-  input.stringfocus,
-  input.numberfocus
-    border 1px solid #20b1fb
-    color #fff
-    cursor auto
+  input.string:focus,
+  input.number:focus
+    border 1px solid #1faaf2
 
   input.error
     border 1px solid #a00
