Use primary variable

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -108,7 +108,7 @@
   input.string,
   input.number
     background $bgdark
-    color #1faaf2
+    color $primary
     min-height 26px
     padding-bottom 1px
     padding-left 5px
