--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -195,7 +195,7 @@ body.aframe-inspector-opened
 
   input.string:focus,
   input.number:focus
-    border 1px solid #1faaf2
+    border 1px solid $primary
 
   input.error
     border 1px solid #a00
