Specify a .select__option--is-selected rule to use the correct primary color in camera select

--- a/src/style/select.styl
+++ b/src/style/select.styl
@@ -43,6 +43,10 @@
 .select__option--is-focused
   background #155373
 
+.select__option--is-selected
+  background $primary
+  color $white
+
 .select__value-container
   height 26px
   position static
