Use currentColor in gltf icon for hover color to work properly, added @svgr/webpack dependency to transform the svg to a react component

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -73,16 +73,14 @@ body.aframe-inspector-opened
   input
     outline none /* osx */
 
-  .gltfIcon img
+  .gltfIcon svg
     box-sizing content-box
     display inline
     height 20px
-    left 5px
-    padding 0 5px
     position relative
     top 4px
     vertical-align baseline
-    width 20px
+    width 30px
 
   #scenegraph,
   #rightPanel
