Clean up css rules related to button icons hover, remove margin-left usage and properly use flex gap, uniform spacing for actions in toolbar, remove bottom black pixel in transform actions

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -28,6 +28,11 @@
   font-weight 600
   vertical-align bottom !important
 
+.componentHeaderActions
+  display flex
+  align-items center
+  gap 10px
+
 .collapsible .static
   background $bglight
   border-bottom 2px solid $bg
@@ -172,6 +177,8 @@
   .collapsible-header
     bottom 5px
     position relative
+  a.button
+    margin-left 10px
   .collapse-button
     display none
   .static
