--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -265,7 +265,7 @@ body.aframe-inspector-opened
   a.button
     color #bcbcbc
     font-size 16px
-    margin-left 10px
+    line-height 1em
     text-decoration none
 
     &:hover
